fixing layout issues and styling

--- a/src/react/styles/_constants.scss
+++ b/src/react/styles/_constants.scss
@@ -1,4 +1,4 @@
-$main-background: #f0f0f0;
+$main-background: #ffffff;
 $foreground: #e4e4e4;
 $text-primary: #494949;
 $text-secondary: #6b6b6b;
@@ -7,4 +7,5 @@ $border-style: 1px solid #c9c9c9;
 $border-radius: 5px;
 $box-shadow-color: #979797;
 $highlight-grey: #636363;
-$white: #ffffff
+$inactive-grey: #b1b1b1;
+$white: #ffffff;
