--- a/src/react/styles/navigation/leftNav.scss
+++ b/src/react/styles/navigation/leftNav.scss
@@ -1,12 +1,10 @@
 @import '../constants';
 
 div.p-left-nav-container {
-    border-right: $border-style;
-    border-radius: 3px;
+    // border-right: $border-style;
     padding: 10px;
     box-shadow: 1px 1px 4px 1px $box-shadow-color;
-    margin-right: 10px;
-    margin-top: 3px;
+    background-color: #f0f0f0;
 
     div.link-container {
         a {
@@ -16,12 +14,12 @@ div.p-left-nav-container {
             font-weight: 500;
             text-decoration: none;
             font-size: 25px;
-    
+            border: 1px solid #f0f0f0;
+            border-radius: 15px;
+
             &:hover{
-                color: $accent-green;
-                border: $border-style;
-                background-color: $highlight-grey;
-                border-radius: 15px;
+                color: white;
+                background-color: $accent-green;
             }
         }  
     }
