--- a/src/react/styles/navigation/router.scss
+++ b/src/react/styles/navigation/router.scss
@@ -17,4 +17,5 @@
  .p-router-routes-container{
     display: flex;
     position: relative;
+    flex-grow: 1;
  }
